# vim:ts=4:sts=4:sw=4:et:tw=60

0.1.3
 - Added Array.isArray shim.
 - Fixed deep and shallow such as to only consolidate owned
   properties.

0.1.2
 - Altered deep and shallow to modify deep promises in-place
   instead of creating new objects.  This should reduce some
   churn and make certain use-cases shorter.  Now operates
   on all enumerable keys instead of merely those that are
   owned.  The consolidate function shrank considerably by
   conflating the cases for Arrays and Objects.

0.1.1
 - Added Lazy constructor for wrapping promises for objects
   that eventually resolve to known types.  The wrapped
   promise object is both a promise and a proxy for all of
   the known methods for the eventual object, where each
   of these methods always returns a promise.

============================================================
Broken off of the Q Library
============================================================

0.4.0 - BACKWARD INCOMPATIBLE*
 - *Removed the utility modules. NPM and Node no longer
   expose any module except the main module.  These have
   been moved and merged into the "qq" package.
 - *In a non-CommonJS browser, q.js can be used as a script.
   It now creates a Q global variable.
 - Fixed thenable assimilation.
 - Fixed some issues with asap, when it resolves to
   undefined, or throws an exception.

0.3.0 - BACKWARD-INCOMPATIBLE
 - The `post` method has been reverted to its original
   signature, as provided in Tyler Close's `ref_send` API.
   That is, `post` accepts two arguments, the second of
   which is an arbitrary object, but usually invocation
   arguments as an `Array`.  To provide variadic arguments
   to `post`, there is a new `invoke` function that posts
   the variadic arguments to the value given in the first
   argument.
 - The `defined` method has been moved from `q` to `q/util`
   since it gets no use in practice but is still
   theoretically useful.
 - The `Promise` constructor has been renamed to