@@ -1,5 +1,10 @@
 # vim:ts=4:sts=4:sw=4:et:tw=60
 
+Next minor
+ - Stopped depending on Q to provide a shim for
+   Array.prototype.reduce since that shim added an
+   enumerable property in older engines.
+
 0.1.3
  - Added Array.isArray shim.
  - Fixed deep and shallow such as to only consolidate owned
